--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Code2Score</title>
+    <script src="https://unpkg.com/tone@13.8.25/build/Tone.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
